Bugfix: Adjust element layout
There was a bug where Yomichan would stop functioning once the page
scrolled, so I fixed this by having the <main> element be static with
its own scrollbar so that the page itself doesn't scroll. I couldn't
figure out any other way to fix this bug so I had to resort to this
which is kinda annoying and more of a workaround, but for a small
program like this, I think it's okay.

I also tweaked the style slightly in this commit.

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ html {
  }
 
 body {
-	margin: 10px;
-	min-height: 100% - 10px;
+	margin: 0;
+	min-height: 100%;
 	background-color: #202020;
 	color: #BCBCBC;
 	font-size: 50px;
@@ -15,10 +15,15 @@ body {
 }
 
 main {
-	margin-top:10px;
-	padding-top: 5px;
-	position: relative;
-	bottom: 70px;
+	margin-left: 10px;
+	position: fixed;
+	bottom: 90px;
+	top:5px;
+	overflow-y: auto;
+}
+
+p {
+	margin-top: 0;
 }
 
 #bottom-textbox {
